# internal/server/handlers.go
@@ -27,6 +27,11 @@ func (s *Server) MapHandlers(e *echo.Echo) error {
 	cRepo := repoRepository.NewActorsRepository(s.db)
 	commUC := repoUseCase.NewActorsUseCase(s.cfg, cRepo, s.logger)
 	actorsHandlers := repoHttp.NewHandler(s.cfg, commUC, s.logger)
+
+	filmRepo := repoRepository.NewFilmsRepository(s.db)
+	filmUC := repoUseCase.NewFilmUseCase(s.cfg, filmRepo, s.logger)
+	filmsHandlers := repoHttp.NewFilmHandler(s.cfg, filmUC, s.logger)
+
 	docs.SwaggerInfo.Version = "1.0"
 	docs.SwaggerInfo.Title = "App API"
 	docs.SwaggerInfo.Description = "REST API."
@@ -60,7 +65,10 @@ func (s *Server) MapHandlers(e *echo.Echo) error {
 
 	health := v1.Group("/health")
 	actorsGroup := v1.Group("/actors")
-	repoHttp.MapToDosRoutes(actorsGroup, actorsHandlers)
+	repoHttp.MapActorsRoutes(actorsGroup, actorsHandlers)
+
+	filmsGroup := v1.Group("/films")
+	repoHttp.MapFilmRoutes(filmsGroup, filmsHandlers)
 
 	health.GET("", func(c echo.Context) error {
 		return c.JSON(http.StatusOK, map[string]string{"status": "healthy!"})
